--- a/login_p/login_page.html
+++ b/login_p/login_page.html
@@ -2,91 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
+  <link rel="stylesheet" href="login_style.css">
 
-input[type=text], input[type=password] {
-  width: 25%;
-  padding: 12px 20px;
-  /* margin: 8px 0; */
-  display: block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-label {
-    display: block;
-    text-align: center;
-    line-height: 150%;
-    font-size: .85em;
-}
-
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  /*margin: 8px 0;*/
-  /*border: 8px solid;*/
-  cursor: pointer;
-  width: 15%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 6px;
-  display: block;
-}
-
-.divider{
-    width:5px;
-    height:auto;
-    display:inline-block;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-  margin-top: 0px;
-}
-
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-}
-
-img.avatar {
-  width: 10%;
-  border-radius: 50%;
-}
-
-.container {
-  padding: 16px;
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-  margin-left:auto;
-  mergin-right:auto;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
-</style>
 </head>
 <body>
 
@@ -110,9 +27,9 @@ span.psw {
     </label>
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn" onclick="location.href='https://mrr.lv/'">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+  <div class="container">
+    <button type="button" class="cancelbtn" onclick="location.href='../index.html'">Cancel</button>
+    <span class="psw"><a href="../index.html">Forgot password?</a></span>
   </div>
 </form>
 
