revisons of login and landing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
 
         <div class="site-main" id="sTop">
-            <!-- <a href="#top" class="navbar-brand"><img border="0" alt="" src="" width="115" height="85"></a> -->
+            <!-- <a href="#top" class="navbar-brand"><img alt="" src="img/vf_logo_to_1line.png"></a> */ -->
             <div class="site-header">
                 <div class="main-header">
                     <div class="container">
