--- a/login_p/login_page.html
+++ b/login_p/login_page.html
@@ -7,18 +7,16 @@
 </head>
 <body>
 
-<h2>Login Form</h2>
-
-<form action="/action_page.php" method="post">
+<form action="" method="post">
   <div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    <img src="../img/vf_logo_txt_tr.png" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
-    <label for="uname"><b>Username</b></label>
+    <label for="uname"><b></b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
 
-    <label for="psw"><b>Password</b></label>
+    <label for="psw"><b></b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
     <button type="submit">Login</button>
